SSTTP-277 implicit auditing.